--- a/style.css
+++ b/style.css
@@ -17,9 +17,27 @@ body
 {
   position: relative;
   width: 320px;
-  height: 285px;
+  height: 303px;
   background: #fff;
-  border-radius: 20px;
+  border-radius: 10px;
   box-shadow: 0 35px 80px rgba(0,0,0,0.15);
+}
+.card_cover{
+  width: 100%;
+  height: 8rem;
+  background-image: linear-gradient(to top right,
+                                      rgba(77, 151, 212),
+                                        rgb(30, 114, 163));
+background-size: cover;
+clip-path: polygon(50 0, 100% 0,100% 80%,0% 100%);
+}
 
+img{
+  justify-content: center;  
+  width: 50%; 
+  height: 80px; 
+  display: block; 
+  margin-right: auto; 
+  margin-left: auto;"
+  border-radius: 50%;
 }
