--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body
 {
   position: relative;
   width: 320px;
-  height: 303px;
+  height: 350px;
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 35px 80px rgba(0,0,0,0.15);
@@ -33,11 +33,32 @@ clip-path: polygon(50 0, 100% 0,100% 80%,0% 100%);
 }
 
 img{
+  position: relative;
+  overflow: hidden;
   justify-content: center;  
   width: 50%; 
   height: 80px; 
   display: block; 
   margin-right: auto; 
-  margin-left: auto;"
+  margin-left: auto;
   border-radius: 50%;
+  margin-top: -3rem;
+  padding: 0rem 1rem;
+  
+}
+.heading{
+  text-align: center;
+  font-family:sans-serif;
+  font-size: 160%;
+}
+.title{
+  text-align: center;
+  font-family:'Courier New', Courier, monospace;
+  font-size: 100%;
+  font-weight: bold;
+}
+p{
+  text-align: justify;
+  text-justify: inter-word;
+  font-size: auto;
 }
